@@ -1,0 +1,6 @@
+case "$1" in
+configure|remove)
+	/sbin/ldconfig
+	;;
+*)	;;
+esac
